add titles to sections

--- a/galeria.html
+++ b/galeria.html
@@ -54,7 +54,11 @@
         </nav>
     </header>
     <main>
-        <section class="bannerGaleria"></section>
+        <section class="bannerGaleria">
+            <div class="bannergaleria__container">
+                <h1 class="bannergaleria__title wow animate__animated animate__jackInTheBox">GALERIA</h1>
+            </div>
+        </section>
         <div class="backgroundGaleria">
                 <!--GALERIA DE FOTOS-->
                 <ul class="containergaleria">
