--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <main>
         <!--BANNER-->
         <section class="bannerinicio">
-            <!-- <div class="bannerinicio__container">
-                <h1 class="bannerinicio__title wow animate__animated animate__lightSpeedInRight">INICIO</h1>
-            </div> -->
+            <div class="bannerinicio__container">
+                <h1 class="bannerinicio__title wow animate__animated animate__jackInTheBox">INICIO</h1>
+            </div>
         </section>
         <!--ARTICULO1-->
         <div class="containerinicio">
