--- a/historia.html
+++ b/historia.html
@@ -55,7 +55,11 @@
     </header>
     <main>
         <!--BANNER-->
-        <section class="bannerHistoria"></section>
+        <section class="bannerHistoria">
+            <div class="bannerhistoria__container">
+                <h1 class="bannerhistoria__title wow animate__animated animate__jackInTheBox">HISTORIA</h1>
+            </div>
+        </section>
         <div class="historia__container">
             <!--CARD 1-->
             <div class="historia__block wow animate__animated animate__zoomIn">
