--- a/galeria.html
+++ b/galeria.html
@@ -54,9 +54,10 @@
         </nav>
     </header>
     <main>
+        <!--BANNER-->
         <section class="bannerGaleria">
             <div class="bannergaleria__container">
-                <h1 class="bannergaleria__title wow animate__animated animate__jackInTheBox">GALERIA</h1>
+                <h1 class="bannergaleria__title wow animate__animated animate__fadeIn">GALERIA</h1>
             </div>
         </section>
         <div class="backgroundGaleria">
@@ -90,6 +91,9 @@
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2">
                     </li>
                     <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/hidan1.png" alt="hidan1">
+                    </li>
+                    <li class="containergaleria__list">
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2">
                     </li>
                     <li class="containergaleria__list">
@@ -108,6 +112,9 @@
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1">
                     </li>
                     <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/hidan2.png" alt="hidan2">
+                    </li>
+                    <li class="containergaleria__list">
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1">
                     </li>
                     <li class="containergaleria__list">
@@ -115,6 +122,9 @@
                     </li>
                     <li class="containergaleria__list">
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1">
+                    </li>
+                    <li class="containergaleria__list">
+                        <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu1.png" alt="kakuzu1">
                     </li>
                     <li class="containergaleria__list">
                         <img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3">
