--- a/historia.html
+++ b/historia.html
@@ -57,7 +57,7 @@
         <!--BANNER-->
         <section class="bannerHistoria">
             <div class="bannerhistoria__container">
-                <h1 class="bannerhistoria__title wow animate__animated animate__jackInTheBox">HISTORIA</h1>
+                <h1 class="bannerhistoria__title wow animate__animated animate__fadeIn">HISTORIA</h1>
             </div>
         </section>
         <div class="historia__container">
