--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!--BANNER-->
         <section class="bannerinicio">
             <div class="bannerinicio__container">
-                <h1 class="bannerinicio__title wow animate__animated animate__jackInTheBox">INICIO</h1>
+                <h1 class="bannerinicio__title wow animate__animated animate__fadeIn">INICIO</h1>
             </div>
         </section>
         <!--ARTICULO1-->
