--- a/unirse.html
+++ b/unirse.html
@@ -54,9 +54,10 @@
         </nav>
     </header>
     <main>
+        <!--BANNER-->
         <section class="bannerUnirse">
             <div class="bannerunirse__container">
-                <h1 class="bannerunirse__title wow animate__animated animate__jackInTheBox">UNIRSE</h1>
+                <h1 class="bannerunirse__title wow animate__animated animate__fadeIn">UNIRSE</h1>
             </div>
         </section>
         <div class="backgroundunirse">
@@ -132,7 +133,7 @@
                         <textarea class="form__textarea" name="objetivo" placeholder="ej: Destruir Konoha"></textarea>
                     </div>
                     <div class="form__button">
-                        <input onclick="alertModal()" class="form__button-input" type="submit" name="Enviar" value="Enviar">
+                        <input class="form__button-input" type="submit" name="Enviar" value="Enviar">
                     </div>
                 </form>
             </div>
