--- a/miembros.html
+++ b/miembros.html
@@ -57,13 +57,14 @@
         <!--BANNER-->
         <section class="bannerMiembros">
             <div class="bannermiembros__container">
-                <h1 class="bannermiembros__title wow animate__animated animate__jackInTheBox">MIEMBROS</h1>
+                <h1 class="bannermiembros__title wow animate__animated animate__fadeIn">MIEMBROS</h1>
             </div>
         </section>
         <div class="containermiembros">
             <!--MIEMBROS-->
             <div class="miembros__container">
                 <div class="miembros__display">
+                    <!--MIEMBRO 1-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/deidara.png" alt="deidara">
                         <div class="miembros__content">
@@ -71,6 +72,7 @@
                             <p class="miembros__card-text">Deidara es un joven muy resentido pero enormemente orgulloso de su arte. Forma parte de Akatsuki, inicialmente su compañero era Sasori pero posteriormente, después de su muerte, su compañero fue Obito Uchiha usando a su personaje Tobi. Llevaba el anillo "azul" en el dedo índice derecho. </p>
                         </div>
                     </div>
+                    <!--MIEMBRO 2-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/hidan.png" alt="hidan">
                         <div class="miembros__content">
@@ -78,6 +80,7 @@
                             <p class="miembros__card-text">Hidan proviene de Yuugakure, una aldea que pretendió haber olvidado la guerra.  Su compañero de equipo es Kakuzu, con el que no se lleva bien, aunque son fuertes juntos. Kakuzu puede coserlo cuando es desmembrado y cuando se pelean Kakuzu no lo puede matar, pues Hidan era "inmortal", aunque la inmortalidad de Hidan es imperfecta por lo que este si puede morir. Lleva el anillo Los "tres niveles" en el dedo índice izquierdo. </p>
                         </div>
                     </div>
+                    <!--MIEMBRO 3-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/itachi.png" alt="itachi">
                                                 <div class="miembros__content">
@@ -85,6 +88,7 @@
                             <p class="miembros__card-text">Itachi era el hermano mayor de Sasuke Uchiha. Fue un prodigioso shinobi de Konoha infiltrado en la organización ANBU como un doble espía. Después de masacrar al Clan Uchiha, se unió a Akatsuki donde su compañero asignado fue Kisame Hoshigaki. Llevaba el anillo "Escarlata" en el dedo anular derecho.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 4-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/kakuzu.png" alt="kakuzu">
                                                 <div class="miembros__content">
@@ -92,6 +96,7 @@
                             <p class="miembros__card-text">Kakuzu fue un ninja renegado de Takigakure y miembro Akatsuki. Su compañero fue Hidan. Llevaba el anillo "Norte" en el dedo medio izquierdo. A pesar de la mutua antipatía entre ambos, su trabajo en equipo fue casi perfecto, porque se complementaban mutuamente. Se los referia como "Combo Zombie" ya que prácticamente no podían morir.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 5-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/kisame.png" alt="kisame">
                                                 <div class="miembros__content">
@@ -99,6 +104,7 @@
                             <p class="miembros__card-text">Kisame Hoshigaki, conocido como el Monstruo de la Niebla Oculta, era un ninja renegado de Kirigakure, ex miembro de los Siete Espadachines Ninja de la Niebla y anteriormente compañero de Itachi Uchiha en Akatsuki. Llevaba el anillo "Sur" en el dedo anular izquierdo.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 6-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/konan.png" alt="konan">
                                                 <div class="miembros__content">
@@ -106,6 +112,7 @@
                             <p class="miembros__card-text">Konan era una kunoichi de Amegakure y único miembro femenino de Akatsuki. Llevaba el anillo "Blanco" en el dedo corazón derecho. Después de la muerte de Nagato, ella desertó de la organización y se convirtió en la líder de Amegakure. Poseía un talento natural para el origami.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 7-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img tobi__img" src="media/miembros/tobi.png" alt="tobi">
                                                 <div class="miembros__content">
@@ -113,6 +120,7 @@
                             <p class="miembros__card-text">Su nombre verdadero es Obito Uchiha, después de su supuesta muerte reaparecio como Tobi. Él era el verdadero líder de Akatsuki. Era uno de los antagonistas principales, hasta su derrota a manos de la Alianza Shinobi y su redención a manos de Naruto Uzumaki. Él mismo se había auto-proclamado como Madara Uchiha para provocar temor en sus contrarios. Además de esto, fue el segundo Jinchūriki del Diez Colas.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 8-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/pain.png" alt="pain">
                                                 <div class="miembros__content">
@@ -120,6 +128,7 @@
                             <p class="miembros__card-text">Nagato, mejor conocido como Pain, era uno de los más poderosos shinobi, y el líder reconocido de Akatsuki y de Amegakure. Llevaba el anillo "Cero" en el dedo pulgar derecho. También era usuario del dōjutsu legendario, el Rinnegan, que fue dado por Madara Uchiha antes de su muerte e implantado en Nagato cuando sólo era un niño. En su estadía en la organización trabajaba con Konan y recibía órdenes de Obito desde las sombras.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 9-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/sasori.png" alt="sasori">
                                                 <div class="miembros__content">
@@ -127,6 +136,7 @@
                             <p class="miembros__card-text">Sasori, también conocido como Sasori de la Arena Roja, era el nieto de Chiyo y miembro de Akatsuki. Llevaba el anillo "Joya" en el pulgar izquierdo. Tenía como compañero a Deidara y antes a Orochimaru hasta que este desertó.</p>
                         </div>
                     </div>
+                    <!--MIEMBRO 10-->
                     <div class="miembros__card wow animate__animated animate__zoomIn">
                         <img class="miembros__img" src="media/miembros/zetsu.png" alt="zetsu">
                                                 <div class="miembros__content">
@@ -158,7 +168,6 @@
     <script src="js/wow.min.js"></script>
     <script script>new WOW().init();</script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
