--- a/miembros.html
+++ b/miembros.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Organizacion akatsuki, Imponer la Paz Mediante la Fuerza. Web dedicada a contar un poco sobre la organizacion, sus miembros y sus principios">
-    <meta name="keywords" content="HTML, JS, CSS, akatsuki, naruto, organizacion, miembros">
+    <meta name="description" content="Organizacion akatsuki, Imponer la Paz Mediante la Fuerza. Web dedicada a contar un poco sobre la organizacion, sus miembros y sus principios.">
+    <meta name="keywords" content="HTML, JS, CSS, akatsuki, naruto, organizacion, miembros, galeria de fotos, unirse.">
 
     <!--BOOTSTRAP AOS WOW CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -27,8 +27,8 @@
     <header>
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-dark ">
-            <img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo">
-            <a class="navbar-brand wow animate__animated animate__pulse" href="">AKATSUKI</a>
+            <a href="index.html"><img class="logo wow animate__animated animate__jello" src="media/simbolo.png" alt="simbolo"></a>
+            <a class="navbar-brand wow animate__animated animate__pulse" href="index.html">AKATSUKI</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
