--- a/unirse.html
+++ b/unirse.html
@@ -133,7 +133,7 @@
                         <textarea class="form__textarea" name="objetivo" placeholder="ej: Destruir Konoha"></textarea>
                     </div>
                     <div class="form__button">
-                        <input class="form__button-input" type="submit" name="Enviar" value="Enviar">
+                        <a href="index.html"><input class="form__button-input" type="submit" name="Enviar" value="Enviar"></a>
                     </div>
                 </form>
             </div>
