--- a/unirse.html
+++ b/unirse.html
@@ -133,7 +133,7 @@
                         <textarea class="form__textarea" name="objetivo" placeholder="ej: Destruir Konoha"></textarea>
                     </div>
                     <div class="form__button">
-                        <a href="index.html"><input class="form__button-input" type="submit" name="Enviar" value="Enviar"></a>
+                        <a class="form__button-input" href="index.html" onclick="alertModal()" type="sumbit" value="Enviar">ENVIAR</a>
                     </div>
                 </form>
             </div>
