--- a/historia.html
+++ b/historia.html
@@ -105,10 +105,10 @@
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
-                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra/"><i class="fab fa-linkedin-in"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="https://github.com/thomasginestra"><i class="fab fa-github"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" target="_blank" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" target="_blank" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" target="_blank" href="https://www.linkedin.com/in/thomas-ginestra/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" target="_blank" href="https://github.com/thomasginestra"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
         <div class="footerbutton">
